@@ -1,3 +1,6 @@
+29 January 2013: Wouter
+	- printout name of zone with duplicate fwd and hint errors.
+
 28 January 2013: Wouter
 	- updated fwd_zero for newer nc. Updated common.sh for newer netstat.
 
